tests/fixtures/positive/design/EnumMinimumValues.cls
public class Example {
    // Valid: Enum with 3 values
    public enum Status3 {
        ACTIVE,
        INACTIVE,
        PENDING
    }

    // Valid: Enum with more than 3 values
    public enum Priority {
        LOW,
        MEDIUM,
        HIGH,
        URGENT
    }
}

