tests/fixtures/negative/structure/EnumMinimumValues.cls
public class Example {
    // Violation: Enum with only 1 value
    public enum Status1 {
        ACTIVE
    }

    // Violation: Enum with only 2 values
    public enum Status2 {
        ACTIVE,
        INACTIVE
    }
}

